# ai-health-bot

./: .dockerignore  .env-sample  Makefile  README.md  alembic.ini  all_prompts.json  config.py  data-1750864125219.csv  data-1751627994733.csv  data-1751970016475.csv  pyproject.toml  question_map.json  question_type_prompts.json  t.py
.docker/: Dockerfile  docker-compose.yaml
src/: bot_instance.py  config.py  llm_analyzer.py  main.py  media_pipeline.py  s3_client.py  video_processor.py
src/bot/: handlers.py  is_admin.py  is_test_allowed.py  keyboards.py  scheduler.py  states.py  utils.py
src/bot/handlers/: awareness_quiz.py  body_shape_quiz.py  close_enviroment_quiz.py  daily_quiz.py  greeting_quiz.py  nutrition_quiz.py  safety_support_quiz.py  subjective_health_quiz.py  supplements_quiz.py  testing.py  timezone.py  utils.py
src/bot/handlers/extra_tasks/: blood_tests.py  breathing_after_exercise.py  breathing_at_rest.py  checkups.py  device.py  feedback.py  pressure_and_pulse.py  reaction.py  smile_laugh.py  speach.py  tongue.py
src/bot/handlers/tasks/: balance_video.py  eye_photo.py  face_photo.py  feet_photo.py  full_height_photos.py  hands_photos.py  neck_and_shoulders_video.py  picking_up_video.py  plank_video.py  running_video.py  squats_video.py  walking_video.py
src/db/: connection.py  models.py  models.sql  patient_repository.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2025_05_06_1949-e3600e2fc9ac_init_schema.py  (+7 more)
src/llm/: scheduler.py  service.py
src/media/: media_pipeline.py  s3_client.py  video_processor.py
