[project]
name = "ai-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.22.0",
    "aiofiles>=24.1.0",
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "ruff>=0.11.8",
]
